# ai-reviewer

./: .env.example  .gitignore  README.md  action.yml  action_runner.py  app.py  config.py  github_client.py  llm_client.py  prompts.py  pyproject.toml  requirements.txt  reviewer.py  triggers.py
.ai/: context-script  review-rules.md
.github/workflows/: ai-review.yml
aws/: README.md  deploy.sh  destroy.sh  reviewbot-web.env.example  update.sh
reviewbot/: __init__.py  action_runner.py  app.py  config.py  context_script.py  github_auth.py  github_client.py  llm_client.py  patch.py  prompts.py  reviewer.py  store.py  tools.py  triggers.py  webapp.py
reviewbot/static/: index.html  index.js  login.html  review.html  review.js  styles.css
tests/: test_config.py  test_context_script.py  test_llm_client.py  test_publish_review.py  test_reviewer.py  test_tools.py  test_triggers.py
